Changing title color sizing and font of recipes.

--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@ body{
     text-color: AliceBlue;
     font-family: 'Courier New', Courier, monospace; 
 }
-head{
+h1{
     text-color: CornflowerBlue;
     font-family: 'Lucida Handwriting', cursive;
 }
